--- a/VeKa/Base.lproj/Main.storyboard
+++ b/VeKa/Base.lproj/Main.storyboard
@@ -48,17 +48,19 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XrP-qC-oOc">
-                                        <rect key="frame" x="191" y="378.5" width="32" height="34"/>
+                                        <rect key="frame" x="132" y="378.5" width="150" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="4f8-aB-cBu"/>
+                                            <constraint firstAttribute="width" constant="150" id="BEF-So-eZi"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tWt-VD-DgO">
-                                        <rect key="frame" x="191" y="478.5" width="32" height="34"/>
+                                        <rect key="frame" x="132" y="478.5" width="150" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="MIe-Je-TCp"/>
+                                            <constraint firstAttribute="width" constant="150" id="OFG-2c-mFa"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -256,21 +258,31 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w66-0f-TyG">
-                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="81.5" y="11.5" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MkO-ed-HpV">
+                                                    <rect key="frame" x="20" y="0.0" width="41.5" height="43.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="MkO-ed-HpV" secondAttribute="height" multiplier="21:22" id="Ob4-3J-Lh1"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="w66-0f-TyG" secondAttribute="bottom" constant="0.5" id="HQ5-pL-V4p"/>
-                                                <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leadingMargin" id="YYv-Qe-Ut5"/>
-                                                <constraint firstItem="w66-0f-TyG" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="topMargin" id="jjc-W4-BBS"/>
+                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leading" constant="20" id="2Ke-tY-wJw"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w66-0f-TyG" secondAttribute="trailing" constant="20" symbolic="YES" id="2Lp-qR-2af"/>
+                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" id="2bc-zv-33R"/>
+                                                <constraint firstItem="w66-0f-TyG" firstAttribute="centerY" secondItem="MkO-ed-HpV" secondAttribute="centerY" id="6ke-3T-lOb"/>
+                                                <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="MkO-ed-HpV" secondAttribute="trailing" constant="20" id="Kw4-tY-l6P"/>
+                                                <constraint firstAttribute="bottom" secondItem="MkO-ed-HpV" secondAttribute="bottom" id="PCb-G4-eFn"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="friendNameLabel" destination="w66-0f-TyG" id="vif-mU-FfH"/>
-                                            <segue destination="YFh-7U-Onf" kind="show" id="1tg-ds-7oH"/>
+                                            <outlet property="friendsPhotoImageView" destination="MkO-ed-HpV" id="GjQ-7L-iMq"/>
+                                            <segue destination="YFh-7U-Onf" kind="show" identifier="showFriendInfo" id="1tg-ds-7oH"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -294,10 +306,10 @@
             </objects>
             <point key="canvasLocation" x="2897.1014492753625" y="415.17857142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--Friend Info View Controller-->
         <scene sceneID="fBj-A7-mjv">
             <objects>
-                <viewController id="YFh-7U-Onf" sceneMemberID="viewController">
+                <viewController id="YFh-7U-Onf" customClass="FriendInfoViewController" customModule="VeKa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AjU-cX-rax">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -305,20 +317,49 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dzb-xg-Pgq">
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="a0i-DP-JPm">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="a0i-DP-JPm">
+                                    <size key="itemSize" width="411" height="485"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cvx-Xz-ReT">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendInfoIdentifire" id="cvx-Xz-ReT" customClass="FriendInfoCollectionViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="1.5" y="0.0" width="411" height="485"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2CT-Bk-rBM">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bK7-7h-66C">
+                                            <rect key="frame" x="0.0" y="0.0" width="411" height="485"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQh-Ex-gOf">
+                                                    <rect key="frame" x="184.5" y="421" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="4tL-DB-877"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nZu-TW-CVL">
+                                                    <rect key="frame" x="0.0" y="0.0" width="411" height="411"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="nZu-TW-CVL" secondAttribute="height" multiplier="1:1" id="IiM-I1-gTP"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="leading" secondItem="bK7-7h-66C" secondAttribute="leading" id="3NK-6h-y9P"/>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="centerX" secondItem="bK7-7h-66C" secondAttribute="centerX" id="4Oe-yk-QiK"/>
+                                                <constraint firstItem="BQh-Ex-gOf" firstAttribute="top" secondItem="nZu-TW-CVL" secondAttribute="bottom" constant="10" id="9cz-BP-WmI"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="centerX" secondItem="BQh-Ex-gOf" secondAttribute="centerX" id="IBr-cG-adz"/>
+                                                <constraint firstItem="nZu-TW-CVL" firstAttribute="top" secondItem="bK7-7h-66C" secondAttribute="top" id="N7X-TB-WIl"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="411" height="485"/>
+                                        <connections>
+                                            <outlet property="friendInfoImageView" destination="nZu-TW-CVL" id="Qrq-QT-dqO"/>
+                                            <outlet property="nameFriendInfoLabel" destination="BQh-Ex-gOf" id="HSg-SG-shN"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -333,10 +374,13 @@
                         <viewLayoutGuide key="safeArea" id="04d-We-6BK"/>
                     </view>
                     <navigationItem key="navigationItem" id="VpG-g1-vAk"/>
+                    <connections>
+                        <outlet property="friendInfoCollectionView" destination="dzb-xg-Pgq" id="u4H-8P-F1t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nlx-Pl-FGq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3787" y="415"/>
+            <point key="canvasLocation" x="3786.9565217391309" y="414.50892857142856"/>
         </scene>
         <!--Друзья-->
         <scene sceneID="Tnn-qo-Lil">
