--- a/VeKa/Base.lproj/Main.storyboard
+++ b/VeKa/Base.lproj/Main.storyboard
@@ -283,15 +283,15 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendsListIdentifire" id="pDo-S0-91U" customClass="FriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendsListIdentifire" rowHeight="76" id="pDo-S0-91U" customClass="FriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pDo-S0-91U" id="A2Y-4W-dnw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="76"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w66-0f-TyG">
-                                                    <rect key="frame" x="81.5" y="11.5" width="42" height="21"/>
+                                                    <rect key="frame" x="93.5" y="27.5" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="O3S-mm-fSa"/>
                                                     </constraints>
@@ -300,7 +300,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MkO-ed-HpV">
-                                                    <rect key="frame" x="20" y="0.0" width="41.5" height="43.5"/>
+                                                    <rect key="frame" x="20" y="10" width="53.5" height="56"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="MkO-ed-HpV" secondAttribute="height" multiplier="21:22" id="Ob4-3J-Lh1"/>
                                                     </constraints>
@@ -309,10 +309,11 @@
                                             <constraints>
                                                 <constraint firstItem="MkO-ed-HpV" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leading" constant="20" id="2Ke-tY-wJw"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w66-0f-TyG" secondAttribute="trailing" constant="20" symbolic="YES" id="2Lp-qR-2af"/>
-                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" id="2bc-zv-33R"/>
+                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" constant="10" id="2bc-zv-33R"/>
                                                 <constraint firstItem="w66-0f-TyG" firstAttribute="centerY" secondItem="MkO-ed-HpV" secondAttribute="centerY" id="6ke-3T-lOb"/>
+                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="centerY" secondItem="A2Y-4W-dnw" secondAttribute="centerY" id="I6a-yf-cZr"/>
                                                 <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="MkO-ed-HpV" secondAttribute="trailing" constant="20" id="Kw4-tY-l6P"/>
-                                                <constraint firstAttribute="bottom" secondItem="MkO-ed-HpV" secondAttribute="bottom" id="PCb-G4-eFn"/>
+                                                <constraint firstAttribute="bottom" secondItem="MkO-ed-HpV" secondAttribute="bottom" constant="10" id="PCb-G4-eFn"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
